@@ -4,7 +4,7 @@ Dist::Zilla::Plugin::Git::NextRelease - Use time-stamp from Git instead of proce
 
 # VERSION
 
-version 0.002013
+version 0.003000
 
 # SYNOPSIS
 
