@@ -1,13 +1,0 @@
-name = E
-version = 0.01
-author = Kent Fredric
-license = Perl_5
-copyright_holder = Kent Fredric
-
-[MetaConfig]
-[MetaJSON]
-[GatherDir]
-[Git::NextRelease]
-time_zone = UTC
-
-[PruneCruft]
