@@ -5,7 +5,7 @@ use utf8;
 
 package Dist::Zilla::Plugin::Git::NextRelease;
 
-our $VERSION = '0.002013';
+our $VERSION = '0.003000';
 
 # ABSTRACT: Use time-stamp from Git instead of process start time.
 
