@@ -1,8 +1,11 @@
 This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL dependencies for all phases (configure/build/runtime/test/develop)
 
-0.002013
+0.003000
  [Added / develop requires]
  - Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes 0.001001
+
+ [Added / test requires]
+ - Dist::Zilla::Util::Test::KENTNL 1.003001
 
  [Changed / develop requires]
  - Test::Kwalitee 1.12 → 1.21
@@ -10,6 +13,12 @@ This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL depen
  [Changed / develop suggests]
  - Dist::Zilla::App::Command::bakeini 0.001001 → 0.001002
  - Dist::Zilla::PluginBundle::Author::KENTNL 2.017002 → 2.020000
+
+ [Removed / test requires]
+ - Cwd
+ - File::Copy::Recursive
+ - FindBin
+ - Path::Tiny
 
 0.002012 2014-08-15T21:16:31Z
  [Added / develop requires]
