@@ -1,6 +1,6 @@
 This file contains changes in OPTIONAL dependencies for standard CPAN phases (configure/build/runtime/test)
 
-0.002013
+0.003000
 
 0.002012 2014-08-15T21:16:31Z
  [Changed / test recommends]
