@@ -1,4 +1,0 @@
-Example changes file
-
-{{$NEXT}}
-  First release
