@@ -1,9 +1,16 @@
 Release history for Dist-Zilla-Plugin-Git-NextRelease
 
 {{$NEXT}}
+ [00 Minor]
+ - Tests refactored
+
  [Dependencies::Stats]
  - Dependencies changed since 0.002012, see misc/*.deps* for details
  - develop: +1 ↑1 (suggests: ↑2)
+ - test: +1 -4
+
+ [Tests]
+ - Refactored tests in terms of dztest.
 
 0.002012 2014-08-15T21:16:31Z
  [00 Trivial]
